Try to receive battery and data at same time :0

--- a/LightMasterMVVM/LightMasterMVVM/Views/Tablets.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/Tablets.xaml
@@ -14,13 +14,13 @@
       <Grid ColumnDefinitions="*" RowDefinitions="230,50">
         <Image Source="resm:LightMasterMVVM.Assets.Blue1Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
-          <Border Grid.Column="0" BorderBrush="{Binding StatusBorderColors[0][11]}" Background="{Binding StatusBackgroundColors[0][11]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[0]}" Background="{Binding BluetoothBackgroundColors[0]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="1" BorderBrush="{Binding StatusBorderColors[1][11]}" Background="{Binding StatusBackgroundColors[1][11]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[0]}" Background="{Binding CableBackgroundColors[0]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="2" BorderBrush="{Binding StatusBorderColors[2][11]}" Background="{Binding StatusBackgroundColors[2][11]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="2" BorderBrush="{Binding BatteryBorderColors[0]}" Background="{Binding BatteryBackgroundColors[0]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.battery-full.png" Margin="0,5,0,5"/>
           </Border>
         </Grid>
@@ -31,13 +31,13 @@
       <Grid ColumnDefinitions="*" RowDefinitions="230,50">
         <Image Source="resm:LightMasterMVVM.Assets.Blue2Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
-          <Border Grid.Column="0" BorderBrush="{Binding StatusBorderColors[0][12]}" Background="{Binding StatusBackgroundColors[0][12]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[1]}" Background="{Binding BluetoothBackgroundColors[1]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="1" BorderBrush="{Binding StatusBorderColors[1][12]}" Background="{Binding StatusBackgroundColors[1][12]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[1]}" Background="{Binding CableBackgroundColors[1]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="2" BorderBrush="{Binding StatusBorderColors[2][12]}" Background="{Binding StatusBackgroundColors[2][12]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="2" BorderBrush="{Binding BatteryBorderColors[1]}" Background="{Binding BatteryBackgroundColors[1]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.battery-full.png" Margin="0,5,0,5"/>
           </Border>
         </Grid>
@@ -48,13 +48,13 @@
       <Grid ColumnDefinitions="*" RowDefinitions="230,50">
         <Image Source="resm:LightMasterMVVM.Assets.Blue3Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
-          <Border Grid.Column="0" BorderBrush="{Binding StatusBorderColors[0][13]}" Background="{Binding StatusBackgroundColors[0][13]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[2]}" Background="{Binding BluetoothBackgroundColors[2]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="1" BorderBrush="{Binding StatusBorderColors[1][13]}" Background="{Binding StatusBackgroundColors[1][13]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[2]}" Background="{Binding CableBackgroundColors[2]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="2" BorderBrush="{Binding StatusBorderColors[2][13]}" Background="{Binding StatusBackgroundColors[2][13]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="2" BorderBrush="{Binding BatteryBorderColors[2]}" Background="{Binding BatteryBackgroundColors[2]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.battery-full.png" Margin="0,5,0,5"/>
           </Border>
         </Grid>
@@ -65,13 +65,13 @@
       <Grid ColumnDefinitions="*" RowDefinitions="230,50">
         <Image Source="resm:LightMasterMVVM.Assets.Red1Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
-          <Border Grid.Column="0" BorderBrush="{Binding StatusBorderColors[0][21]}" Background="{Binding StatusBackgroundColors[0][21]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[3]}" Background="{Binding BluetoothBackgroundColors[3]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="1" BorderBrush="{Binding StatusBorderColors[1][21]}" Background="{Binding StatusBackgroundColors[1][21]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[3]}" Background="{Binding CableBackgroundColors[3]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="2" BorderBrush="{Binding StatusBorderColors[2][21]}" Background="{Binding StatusBackgroundColors[2][21]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="2" BorderBrush="{Binding BatteryBorderColors[3]}" Background="{Binding BatteryBackgroundColors[3]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.battery-full.png" Margin="0,5,0,5"/>
           </Border>
         </Grid>
@@ -82,13 +82,13 @@
       <Grid ColumnDefinitions="*" RowDefinitions="230,50">
         <Image Source="resm:LightMasterMVVM.Assets.Red2Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
-          <Border Grid.Column="0" BorderBrush="{Binding StatusBorderColors[0][22]}" Background="{Binding StatusBackgroundColors[0][22]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[4]}" Background="{Binding BluetoothBackgroundColors[4]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="1" BorderBrush="{Binding StatusBorderColors[1][22]}" Background="{Binding StatusBackgroundColors[1][22]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[4]}" Background="{Binding CableBackgroundColors[4]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="2" BorderBrush="{Binding StatusBorderColors[2][22]}" Background="{Binding StatusBackgroundColors[2][22]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="2" BorderBrush="{Binding BatteryBorderColors[4]}" Background="{Binding BatteryBackgroundColors[4]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.battery-full.png" Margin="0,5,0,5"/>
           </Border>
         </Grid>
@@ -97,15 +97,17 @@
     </Border>
     <Border Background="#eeeeee" BorderBrush="LightGray" BorderThickness="2" Height="280" Width="240" CornerRadius="4" Grid.Row="1" Grid.Column="2" Margin="7">
       <Grid ColumnDefinitions="*" RowDefinitions="230,50">
+        
         <Image Source="resm:LightMasterMVVM.Assets.Red3Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
+        <Button Command="{Binding SetTest}" Content="{Binding Text}" Grid.Row="0" Opacity="1"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
-          <Border Grid.Column="0" BorderBrush="{Binding StatusBorderColors[0][23]}" Background="{Binding StatusBackgroundColors[0][23]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[5]}" Background="{Binding BluetoothBackgroundColors[5]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="1" BorderBrush="{Binding StatusBorderColors[1][23]}" Background="{Binding StatusBackgroundColors[1][23]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[5]}" Background="{Binding CableBackgroundColors[5]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
           </Border>
-          <Border Grid.Column="2" BorderBrush="{Binding StatusBorderColors[2][23]}" Background="{Binding StatusBackgroundColors[2][23]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
+          <Border Grid.Column="2" BorderBrush="{Binding BatteryBorderColors[5]}" Background="{Binding BatteryBackgroundColors[5]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.battery-full.png" Margin="0,5,0,5"/>
           </Border>
         </Grid>
