--- a/LightMasterMVVM/LightMasterMVVM/Views/Matches.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/Matches.xaml
@@ -55,7 +55,7 @@
       </Setter>
     </Style>
   </UserControl.Styles>
-  <Grid ColumnDefinitions="*" RowDefinitions="110,*,50" Width="1500">
+  <Grid ColumnDefinitions="*" RowDefinitions="110,*,50" Width="1200">
     <Grid ColumnDefinitions="300,*,*" Grid.Row="0" Margin="0,0,18,0">
       <TextBlock Text="Matches" Grid.Column="0" Grid.Row="0" FontSize="40"/>
       <Border Grid.Column="1" Grid.Row="0" Background="LightPink" Margin="30,0" BorderBrush="Red" CornerRadius="4,4,0,0" Padding="10" BorderThickness="4,4,4,0">
@@ -72,6 +72,7 @@
       <Border Grid.Column="2" Grid.Row="0" Background="LightBlue" Margin="30,0,30,0" BorderBrush="Blue" CornerRadius="4,4,0,0" Padding="10" BorderThickness="4,4,4,0">
         <StackPanel>
           <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Foreground="DarkBlue" Text="Blue Entries" FontSize="40"/>
+          
           <Grid ColumnDefinitions="*,*,*">
             <TextBlock Text="{Binding Blue1CurrentMatch.TeamNumber}" Foreground="DarkBlue" FontSize="30" FontWeight="Bold" Grid.Column="0" HorizontalAlignment="Center"/>
             <TextBlock Text="{Binding Blue2CurrentMatch.TeamNumber}" Foreground="DarkBlue" FontSize="30" FontWeight="Bold" Grid.Column="1" HorizontalAlignment="Center"/>
@@ -80,7 +81,7 @@
         </StackPanel>
       </Border>
     </Grid>
-    <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" MaxHeight="600">
+    <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" MaxHeight="450">
       <Grid ColumnDefinitions="300, *, *">
         <StackPanel Grid.Column="0" Margin="0,10,0,0">
           <TextBlock Margin="20,0,0,0" FontSize="30" Text="Team Number"/>
@@ -120,7 +121,7 @@
           <Grid ColumnDefinitions="*,*,*">
             <StackPanel Grid.Column="0">
               <TextBlock Margin="20,0,0,0" FontSize="30" Text="{Binding Blue1CurrentMatch.TeamNumber}"/>
-              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Blue1CurrentMatch.ScoutName, StringFormat={}:{0}}}"/>
+              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Blue1CurrentMatch.ScoutName, StringFormat={}{0} }}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="7.25" IsChecked="{Binding Blue1CurrentMatch.A_InitiationLine}"/>
@@ -153,7 +154,7 @@
             </StackPanel>
             <StackPanel Grid.Column="1">
               <TextBlock Margin="20,0,0,0" FontSize="30" Text="{Binding Blue2CurrentMatch.TeamNumber}"/>
-              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Blue2CurrentMatch.ScoutName, StringFormat={}:{0}}}"/>
+              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Blue2CurrentMatch.ScoutName, StringFormat={}{0} }}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="7.25" IsChecked="{Binding Blue2CurrentMatch.A_InitiationLine}"/>
@@ -186,7 +187,7 @@
             </StackPanel>
             <StackPanel Grid.Column="2">
               <TextBlock Margin="20,0,0,0" FontSize="30" Text="{Binding Blue3CurrentMatch.TeamNumber}"/>
-              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Blue3CurrentMatch.ScoutName, StringFormat={}:{0}}}"/>
+              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Blue3CurrentMatch.ScoutName, StringFormat={}{0} }}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="7.25" IsChecked="{Binding Blue3CurrentMatch.A_InitiationLine}"/>
@@ -225,7 +226,7 @@
           <Grid ColumnDefinitions="*,*,*">
             <StackPanel Grid.Column="0">
               <TextBlock Margin="20,0,0,0" FontSize="30" Text="{Binding Red1CurrentMatch.TeamNumber}"/>
-              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Red1CurrentMatch.ScoutName, StringFormat={}:{0}}}"/>
+              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Red1CurrentMatch.ScoutName, StringFormat={}{0} }}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="7.25" IsChecked="{Binding Red1CurrentMatch.A_InitiationLine}"/>
@@ -258,7 +259,7 @@
             </StackPanel>
             <StackPanel Grid.Column="1">
               <TextBlock Margin="20,0,0,0" FontSize="30" Text="{Binding Red2CurrentMatch.TeamNumber}"/>
-              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Red2CurrentMatch.ScoutName, StringFormat={}:{0}}}"/>
+              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Red2CurrentMatch.ScoutName, StringFormat={}{0} }}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="7.25" IsChecked="{Binding Red2CurrentMatch.A_InitiationLine}"/>
@@ -291,7 +292,7 @@
             </StackPanel>
             <StackPanel Grid.Column="2">
               <TextBlock Margin="20,0,0,0" FontSize="30" Text="{Binding Red3CurrentMatch.TeamNumber}"/>
-              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Red3CurrentMatch.ScoutName, StringFormat={}:{0}}}"/>
+              <TextBlock Margin="20,0,0,0" FontSize="25" Text="{Binding Red3CurrentMatch.ScoutName, StringFormat={}{0} }}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="7.25" IsChecked="{Binding Red3CurrentMatch.A_InitiationLine}"/>
