--- a/LightMasterMVVM/LightMasterMVVM/Views/Matches.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/Matches.xaml
@@ -122,7 +122,7 @@
           <Grid ColumnDefinitions="*,*,*">
             <StackPanel Grid.Column="0">
               <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Blue1CurrentMatch.TeamNumber}"/>
-              <TextBox Background="LightPink" BorderThickness="0,0,0,2" BorderBrush="Red" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="25" Text="{Binding Blue1CurrentMatch.ScoutName, StringFormat={}{0} }, Mode=TwoWay}"/>
+              <TextBox Background="LightBlue" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="4" BorderBrush="Blue" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Blue1CurrentMatch.TeamNumber, Mode=TwoWay}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
                   <CheckBox Margin="6" IsChecked="{Binding Blue1CurrentMatch.A_InitiationLine}"/>
