--- a/LightMasterMVVM/LightMasterMVVM/Views/Matches.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/Matches.xaml
@@ -85,7 +85,6 @@
     <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" MaxHeight="450">
       <Grid ColumnDefinitions="300, *, *">
         <StackPanel Grid.Column="0" Margin="0,10,0,0">
-          <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="Team Number"/>
           <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="25" Text="Scouted By:"/>
           <Border BorderBrush="Blue" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
             <StackPanel Margin="15,0,0,0">
@@ -121,7 +120,6 @@
         <Border VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Background="LightBlue" Margin="30,0" BorderBrush="Blue" CornerRadius="0,0,0,0" Padding="10" BorderThickness="4,0,4,0">
           <Grid ColumnDefinitions="*,*,*">
             <StackPanel Grid.Column="0">
-              <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Blue1CurrentMatch.TeamNumber}"/>
               <TextBox Background="LightBlue" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="10" BorderBrush="Blue" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Blue1CurrentMatch.ScoutName, Mode=TwoWay}" IsEnabled="{Binding Blue1MatchEditable}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
@@ -166,7 +164,7 @@
 
             </StackPanel>
             <StackPanel Grid.Column="1">
-              <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Blue2CurrentMatch.TeamNumber}"/>
+              
               <TextBox Background="LightBlue" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="10" BorderBrush="Blue" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Blue2CurrentMatch.ScoutName, Mode=TwoWay}" IsEnabled="{Binding Blue2MatchEditable}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
@@ -211,7 +209,7 @@
 
             </StackPanel>
             <StackPanel Grid.Column="2">
-              <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Blue3CurrentMatch.TeamNumber}"/>
+              
               <TextBox Background="LightBlue" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="10" BorderBrush="Blue" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Blue3CurrentMatch.ScoutName, Mode=TwoWay}" IsEnabled="{Binding Blue3MatchEditable}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
@@ -262,7 +260,7 @@
         <Border VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" Background="LightPink" Margin="30,0" BorderBrush="Red" CornerRadius="0,0,0,0" Padding="10" BorderThickness="4,0,4,0">
           <Grid ColumnDefinitions="*,*,*">
             <StackPanel Grid.Column="0">
-              <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Red1CurrentMatch.TeamNumber}"/>
+              
               <TextBox Background="LightPink" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="10" BorderBrush="Red" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Red1CurrentMatch.ScoutName, Mode=TwoWay}" IsEnabled="{Binding Red1MatchEditable}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
@@ -307,7 +305,7 @@
 
             </StackPanel>
             <StackPanel Grid.Column="1">
-              <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Red2CurrentMatch.TeamNumber}"/>
+              
               <TextBox Background="LightPink" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="10" BorderBrush="Red" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Red2CurrentMatch.ScoutName, Mode=TwoWay}" IsEnabled="{Binding Red2MatchEditable}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
@@ -352,7 +350,7 @@
 
             </StackPanel>
             <StackPanel Grid.Column="2">
-              <TextBlock FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" FontSize="30" Text="{Binding Red3CurrentMatch.TeamNumber}"/>
+              
               <TextBox Background="LightPink" HorizontalAlignment="Left" BorderThickness="0,0,0,1" Width="80" Height="30" FontSize="17" MaxLength="10" BorderBrush="Red" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik" Margin="20,0,0,0" Text="{Binding Red3CurrentMatch.ScoutName, Mode=TwoWay}" IsEnabled="{Binding Red3MatchEditable}"/>
               <Border BorderBrush="Transparent" BorderThickness="5,0,0,0" CornerRadius="6,6,6,6" Margin="0,15">
                 <StackPanel Margin="15,0,0,0">
@@ -404,16 +402,28 @@
     <Grid ColumnDefinitions="300,*,*" Grid.Row="2" Margin="0,0,18,0">
       <Border Grid.Column="1" Grid.Row="0" Background="LightPink" Margin="30,0" BorderBrush="Red" CornerRadius="0,0,4,4" Padding="10" BorderThickness="4,0,4,4">
         <Grid ColumnDefinitions="*,*,*">
-          <TextBlock Text="X" ToolTip.Tip="Data not found!" Grid.Column="0" IsVisible="{Binding Red1MatchNotFilled}"/>
-          <TextBlock Text="X" ToolTip.Tip="Data not found!" Grid.Column="1" IsVisible="{Binding Red2MatchNotFilled}"/>
-          <TextBlock Text="X" ToolTip.Tip="Data not found!" Grid.Column="2" IsVisible="{Binding Red3MatchNotFilled}"/>
+          <Border Grid.Column="0" ToolTip.Tip="Data not found!" BorderBrush="DarkRed" Background="DarkRed" BorderThickness="2" Height="30" Width="30" CornerRadius="30" IsVisible="{Binding Red1MatchNotFilled}">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="LightPink" Text="X" FontWeight="Black" FontSize="20" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik"/>
+          </Border>
+          <Border Grid.Column="1" ToolTip.Tip="Data not found!" BorderBrush="DarkRed" Background="DarkRed" BorderThickness="2" Height="30" Width="30" CornerRadius="30" IsVisible="{Binding Red2MatchNotFilled}">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="LightPink" Text="X" FontWeight="Black" FontSize="20" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik"/>
+          </Border>
+          <Border Grid.Column="2" ToolTip.Tip="Data not found!" BorderBrush="DarkRed" Background="DarkRed" BorderThickness="2" Height="30" Width="30" CornerRadius="30" IsVisible="{Binding Red3MatchNotFilled}">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="LightPink" Text="X" FontWeight="Black" FontSize="20" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik"/>
+          </Border>
         </Grid>
       </Border>
       <Border Grid.Column="2" Grid.Row="0" Background="LightBlue" Margin="30,0,30,0" BorderBrush="Blue" CornerRadius="0,0,4,4" Padding="10" BorderThickness="4,0,4,4">
         <Grid ColumnDefinitions="*,*,*">
-          <TextBlock Text="X" ToolTip.Tip="Data not found!" Grid.Column="0" IsVisible="{Binding Blue1MatchNotFilled}"/>
-          <TextBlock Text="X" ToolTip.Tip="Data not found!" Grid.Column="1" IsVisible="{Binding Blue2MatchNotFilled}"/>
-          <TextBlock Text="X" ToolTip.Tip="Data not found!" Grid.Column="2" IsVisible="{Binding Blue3MatchNotFilled}"/>
+          <Border Grid.Column="0" ToolTip.Tip="Data not found!" BorderBrush="DarkBlue" Background="DarkBlue" BorderThickness="2" Height="30" Width="30" CornerRadius="30" IsVisible="{Binding Blue1MatchNotFilled}">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="LightBlue" Text="X" FontWeight="Black" FontSize="20" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik"/>
+          </Border>
+          <Border Grid.Column="1" ToolTip.Tip="Data not found!" BorderBrush="DarkBlue" Background="DarkBlue" BorderThickness="2" Height="30" Width="30" CornerRadius="30" IsVisible="{Binding Blue2MatchNotFilled}">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="LightBlue" Text="X" FontWeight="Black" FontSize="20" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik"/>
+          </Border>
+          <Border Grid.Column="2" ToolTip.Tip="Data not found!" BorderBrush="DarkBlue" Background="DarkBlue" BorderThickness="2" Height="30" Width="30" CornerRadius="30" IsVisible="{Binding Blue3MatchNotFilled}">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="LightBlue" Text="X" FontWeight="Black" FontSize="20" FontFamily="resm:LightMasterMVVM.Assets?assembly=LightMasterMVVM#Rubik"/>
+          </Border>
         </Grid>
       </Border>
     </Grid>
