--- a/LightMasterMVVM/LightMasterMVVM/Views/Tablets.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/Tablets.xaml
@@ -21,7 +21,7 @@
         </Image>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[0]}" Background="{Binding BluetoothBackgroundColors[0]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
-            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
+            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[0]}"/>
           </Border>
           <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[0]}" Background="{Binding CableBackgroundColors[0]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
@@ -37,7 +37,7 @@
         <Image Source="resm:LightMasterMVVM.Assets.Blue2Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[1]}" Background="{Binding BluetoothBackgroundColors[1]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
-            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
+            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[1]}"/>
           </Border>
           <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[1]}" Background="{Binding CableBackgroundColors[1]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
@@ -54,7 +54,7 @@
         <Image Source="resm:LightMasterMVVM.Assets.Blue3Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[2]}" Background="{Binding BluetoothBackgroundColors[2]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
-            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
+            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[2]}"/>
           </Border>
           <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[2]}" Background="{Binding CableBackgroundColors[2]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
@@ -71,7 +71,7 @@
         <Image Source="resm:LightMasterMVVM.Assets.Red1Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[3]}" Background="{Binding BluetoothBackgroundColors[3]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
-            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
+            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[3]}"/>
           </Border>
           <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[3]}" Background="{Binding CableBackgroundColors[3]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
@@ -88,7 +88,7 @@
         <Image Source="resm:LightMasterMVVM.Assets.Red2Tablet.png" Margin="0,0,0,5" Grid.Row="0"/>
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[4]}" Background="{Binding BluetoothBackgroundColors[4]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
-            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
+            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[4]}"/>
           </Border>
           <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[4]}" Background="{Binding CableBackgroundColors[4]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
@@ -107,7 +107,7 @@
         
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="{Binding BluetoothBorderColors[5]}" Background="{Binding BluetoothBackgroundColors[5]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
-            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5"/>
+            <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[5]}"/>
           </Border>
           <Border Grid.Column="1" BorderBrush="{Binding CableBorderColors[5]}" Background="{Binding CableBackgroundColors[5]}" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.plugin.png" Margin="0,5,0,5"/>
