--- a/LightMasterMVVM/LightMasterMVVM/Views/MainWindow.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/MainWindow.xaml
@@ -25,7 +25,7 @@
     <Style Selector="Button.menu:focus">
       <Setter Property="Background" Value="Gray"/>
       <Setter Property="BorderBrush" Value="Gray"/>
-      <Setter Property="Foreground" Value="Black"/>
+      <Setter Property="Foreground" Value="White"/>
     </Style>
     <Style Selector="Button.menu:pressed">
       <Setter Property="Background" Value="Gray"/>
@@ -38,7 +38,6 @@
     <Grid.RowDefinitions>
       <RowDefinition Height="50"/>
       <RowDefinition Height="*"/>
-      <RowDefinition Height="100"/>
     </Grid.RowDefinitions>
     <Grid ColumnDefinitions="120,120,120,120" RowDefinitions="120" Grid.Row="0" Margin="30,10,30,30" >
       <Grid Grid.Column="0" ColumnDefinitions="*" RowDefinitions="80">
@@ -82,7 +81,7 @@
       </Border>
       
     </Grid>
-    <Grid Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" ColumnDefinitions="100,50" Margin="0,15,0,5">
+    <Grid Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" ColumnDefinitions="100,50" Margin="0,15,0,5">
       <TextBlock Grid.Column="0" Text="{Binding MatchNumString}" FontWeight="ExtraBold" VerticalAlignment="Center" FontSize="17"/>
       <Grid Grid.Column="1" RowDefinitions="20,20">
         <Button Grid.Row="0" Command="{Binding NextMatch}">
@@ -102,6 +101,12 @@
           </Button.Template>
         </Button>
       </Grid>
+      
+      
+    </Grid>
+    <Grid Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="0,15,0,5">
+
+      <screens:NotifyUser DataContext="{Binding NotificationViewModel}"/>
       
       
     </Grid>
